// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Detailspage tests should render full Detailspage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -10px;
}

.c3 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 > * {
  margin-left: 10px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-left: -5px;
}

.c4 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 > * {
  margin-left: 5px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -5px;
}

.c8 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 > * {
  margin-left: 5px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  cursor: pointer;
}

.c15 {
  cursor: pointer;
}

.c15 svg path {
  fill: #aaaaaa;
}

.c5 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c22 {
  height: 50px;
  width: 50px;
  line-height: 50px;
}

.c22 * {
  height: inherit;
  width: inherit;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #c8d3d9;
  position: relative;
}

.c20 {
  margin: 0 0 1px 0;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-right: 5px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  word-break: break-all;
  min-width: 100px;
}

.c30 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #eeeeee;
  border-right: 1px solid #c8d3d9;
  cursor: pointer;
  background-color: #eeeeee;
  border-bottom: 1px solid #eeeeee;
  margin-bottom: -2px;
  border-top: 2px solid #87d050;
}

.c30:first-child {
  border-left: 1px solid #c8d3d9;
}

.c31 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #fff;
  border-right: 1px solid #c8d3d9;
  cursor: pointer;
  border-top: 2px solid #fff;
}

.c31:hover {
  border-top: 2px solid #c8d3d9;
}

.c31:first-child {
  border-left: 1px solid #fff;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-bottom: 2px solid #66c430;
  margin-top: 30px;
  margin-bottom: 15px;
}

.c36 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c45 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c35 td {
  padding: 4px 4px 4px 0;
}

.c35 tr td:first-child {
  padding-right: 5px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-spacing: 0px;
  color: #787878;
  font-size: 10px;
}

.c26 :nth-child(even) {
  margin-left: 3px;
}

.c26 :nth-child(odd) {
  margin-left: 30px;
}

.c37 {
  width: 10%;
}

.c38 {
  width: 90%;
}

.c33 {
  font-size: 0.7em;
}

.c44 > *:not(:last-child)::after {
  content: '•';
  margin-left: 5px;
}

.c40 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #393637;
  vertical-align: middle;
  text-align: center;
}

.c42 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c41 {
  height: 13px;
  width: 100%;
  background: #4f91c7;
}

.c43 {
  white-space: nowrap;
}

.c39:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #66c430;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  position: relative;
  display: none;
}

.c9:hover .c11 {
  display: block;
}

.c12 {
  position: absolute;
  margin: 0;
  padding: 0;
  left: 0;
  top: 0;
  z-index: 100;
  list-style: none;
  font-size: 10px;
  width: 255px;
}

.c13 {
  height: 22px;
  width: 255px;
  border-left: 1px solid #787878;
  border-right: 1px solid #787878;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #fff;
  font-weight: bold;
  text-indent: 12px;
  text-align: left;
}

.c13:first-child {
  border-top: 1px solid #787878;
}

.c13:last-child {
  border-bottom: 1px solid #787878;
}

.c13:hover {
  background: #66c430;
  color: #fff;
}

.c13 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  cursor: pointer;
}

@media print {
  .c6 {
    display: none;
  }
}

@media print {
  .c15 {
    display: none;
  }
}

@media print {
  .c36 {
    border-collapse: collapse;
  }
}

@media print {
  .c45 {
    border-collapse: collapse;
  }
}

@media print {
  .c40 {
    background: none;
    border: 0;
  }
}

@media print {
  .c42 {
    color: black;
  }
}

@media print {
  .c41 {
    background: none;
  }
}

<div
  class="c0"
>
  <div
    class="toolbar c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        margin="10px"
      >
        <div
          class="c2"
        >
          <div
            class="c4"
            margin="5px"
          >
            <a
              href="test/en/scanning.html#managing-tasks"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c5 c6"
                data-testid="svg-icon"
                title="Help: Tasks"
              >
                <svg>
                  help.svg
                </svg>
              </span>
            </a>
            <a
              class="c7"
              href="/tasks"
            >
              <span
                class="c5 c6"
                data-testid="svg-icon"
                title="Task List"
              >
                <svg>
                  list.svg
                </svg>
              </span>
            </a>
            <span
              class="c5 c6"
              data-testid="svg-icon"
              title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
            >
              <svg>
                alterable.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2"
        >
          <div
            class="c8"
            margin="5px"
          >
            <span
              class="c9 c10"
            >
              <span
                class="c5 c6"
                data-testid="svg-icon"
              >
                <svg>
                  new.svg
                </svg>
              </span>
              <div
                class="c11"
              >
                <ul
                  class="c12"
                >
                  <li
                    class="c13"
                  >
                    <div
                      class="c14"
                    >
                      New Task
                    </div>
                  </li>
                  <li
                    class="c13"
                  >
                    <div
                      class="c14"
                    >
                      New Container Task
                    </div>
                  </li>
                </ul>
              </div>
            </span>
            <span
              class="c5 c6"
              data-testid="svg-icon"
              title="Clone Task"
            >
              <svg>
                clone.svg
              </svg>
            </span>
            <span
              class="c5 c6"
              data-testid="svg-icon"
              title="Edit Task"
            >
              <svg>
                edit.svg
              </svg>
            </span>
            <span
              class="c5 c6"
              data-testid="svg-icon"
              title="Move Task to trashcan"
            >
              <svg>
                trashcan.svg
              </svg>
            </span>
            <span
              class="c5 c6"
              data-testid="svg-icon"
              title="Export Task as XML"
            >
              <svg>
                export.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2"
        >
          <div
            class="c8"
            margin="5px"
          >
            <span
              class="c5 c6"
              data-testid="svg-icon"
              title="Start"
            >
              <svg>
                start.svg
              </svg>
            </span>
            <span
              alt="Resume"
              class="c5 c15"
              data-testid="svg-icon"
              title="Task is not stopped"
            >
              <svg>
                resume.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2"
        >
          <div
            class="c3"
            margin="10px"
          >
            <div
              class="c2"
            >
              <div
                class="c8"
                margin="5px"
              >
                <a
                  class="c7"
                  data-testid="details-link"
                  href="/report/1234"
                  title="Last Report for Task foo from 07/30/2019"
                >
                  <span
                    class="c5 c6"
                    data-testid="svg-icon"
                  >
                    <svg>
                      report.svg
                    </svg>
                  </span>
                </a>
                <a
                  class="c7"
                  href="/reports?filter=task_id%3D12345"
                  title="Total Reports for Task foo"
                >
                  <div
                    class="c16"
                  >
                    <span
                      class="c5 c6"
                      data-testid="svg-icon"
                    >
                      <svg>
                        report.svg
                      </svg>
                    </span>
                    <span
                      class="c17"
                      data-testid="badge-icon"
                    >
                      1
                    </span>
                  </div>
                </a>
              </div>
            </div>
            <a
              class="c7"
              href="/results?filter=task_id%3D12345"
              title="Results for Task foo"
            >
              <div
                class="c16"
              >
                <span
                  class="c5 c6"
                  data-testid="svg-icon"
                >
                  <svg>
                    result.svg
                  </svg>
                </span>
                <span
                  class="c17"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
            <div
              class="c2"
            >
              <div
                class="c8"
                margin="5px"
              >
                <a
                  class="c7"
                  href="/notes?filter=task_id%3D12345"
                  title="Notes for Task foo"
                >
                  <div
                    class="c16"
                  >
                    <span
                      class="c5 c6"
                      data-testid="svg-icon"
                    >
                      <svg>
                        note.svg
                      </svg>
                    </span>
                    <span
                      class="c17"
                      data-testid="badge-icon"
                    >
                      0
                    </span>
                  </div>
                </a>
                <a
                  class="c7"
                  href="/overrides?filter=task_id%3D12345"
                  title="Overrides for Task foo"
                >
                  <div
                    class="c16"
                  >
                    <span
                      class="c5 c6"
                      data-testid="svg-icon"
                    >
                      <svg>
                        override.svg
                      </svg>
                    </span>
                    <span
                      class="c17"
                      data-testid="badge-icon"
                    >
                      0
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    class="entity-section"
  >
    <div
      class="section-header c18"
    >
      <h2
        class="c19 c20"
      >
        <div
          class="c21"
        >
          <span
            class="c22 c6"
            data-testid="svg-icon"
          >
            <svg>
              task.svg
            </svg>
          </span>
        </div>
        <div
          class="c23"
        >
          Task: foo
        </div>
      </h2>
      <div
        class="c24"
      >
        <div
          class="c25"
        >
          <div
            class="c26"
          >
            <div>
              ID:
            </div>
            <div>
              12345
            </div>
            <div>
              Created:
            </div>
            <div>
              Tue, Jul 16, 2019 8:31 AM CEST
            </div>
            <div>
              Modified:
            </div>
            <div>
              Tue, Jul 16, 2019 8:44 AM CEST
            </div>
            <div>
              Owner:
            </div>
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c27"
    >
      <div
        class="c28"
      >
        <div
          class="c29"
        >
          <div
            class="c30"
          >
            Information
          </div>
          <div
            class="c31"
          >
            <div
              class="c32"
            >
              <span>
                User Tags
              </span>
              <span
                class="c33"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
          <div
            class="c31"
          >
            <div
              class="c32"
            >
              <span>
                Permissions
              </span>
              <span
                class="c33"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c34"
      >
        <table
          class="c35 c36"
        >
          <colgroup>
            <col
              class="c37"
              width="10%"
            />
            <col
              class="c38"
              width="90%"
            />
          </colgroup>
          <tbody
            class=""
          >
            <tr>
              <td>
                <div
                  class="c34"
                >
                  Name
                </div>
              </td>
              <td>
                <div
                  class="c34"
                >
                  foo
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c34"
                >
                  Comment
                </div>
              </td>
              <td>
                <div
                  class="c34"
                >
                  bar
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c34"
                >
                  Alterable
                </div>
              </td>
              <td>
                <div
                  class="c34"
                >
                  Yes
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c34"
                >
                  Status
                </div>
              </td>
              <td>
                <div
                  class="c34"
                >
                  <a
                    class="c39 c7"
                    data-testid="details-link"
                    href="/report/1234"
                  >
                    <div
                      class="c40"
                      data-testid="progressbar-box"
                      title="Done"
                    >
                      <div
                        class="c41"
                        data-testid="progress"
                      />
                      <div
                        class="c42"
                      >
                        <span
                          class="c43"
                        >
                          Done
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="c27"
        >
          <div
            class="c34"
          >
            <h2>
              Target
            </h2>
            <div>
              <a
                class="c7"
                data-testid="details-link"
                href="/target/5678"
              >
                target1
              </a>
            </div>
          </div>
          <div
            class="c34"
          >
            <h2>
              Alerts
            </h2>
            <div>
              <div
                class="c2"
              >
                <div
                  class="c44 c8"
                  margin="5px"
                >
                  <span>
                    <a
                      class="c7"
                      data-testid="details-link"
                      href="/alert/91011"
                    >
                      alert1
                    </a>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c34"
          >
            <h2>
              Scanner
            </h2>
            <div>
              <table
                class="c35 c45"
              >
                <colgroup>
                  <col
                    class="c37"
                    width="10%"
                  />
                  <col
                    class="c38"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c34"
                      >
                        Name
                      </div>
                    </td>
                    <td>
                      <div
                        class="c34"
                      >
                        <span>
                          <a
                            class="c7"
                            data-testid="details-link"
                            href="/scanner/1516"
                          >
                            scanner1
                          </a>
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c34"
                      >
                        Type
                      </div>
                    </td>
                    <td>
                      <div
                        class="c34"
                      >
                        OpenVAS Scanner
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c34"
          >
            <h2>
              Assets
            </h2>
            <div>
              <table
                class="c35 c45"
              >
                <colgroup>
                  <col
                    class="c37"
                    width="10%"
                  />
                  <col
                    class="c38"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c34"
                      >
                        Add to Assets
                      </div>
                    </td>
                    <td>
                      <div
                        class="c34"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c34"
                      >
                        Apply Overrides
                      </div>
                    </td>
                    <td>
                      <div
                        class="c34"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c34"
                      >
                        Min QoD
                      </div>
                    </td>
                    <td>
                      <div
                        class="c34"
                      >
                        70 %
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c34"
          >
            <h2>
              Scan
            </h2>
            <div>
              <table
                class="c35 c45"
              >
                <colgroup>
                  <col
                    class="c37"
                    width="10%"
                  />
                  <col
                    class="c38"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c34"
                      >
                        Duration of last Scan
                      </div>
                    </td>
                    <td>
                      <div
                        class="c34"
                      >
                        2 minutes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c34"
                      >
                        Auto delete Reports
                      </div>
                    </td>
                    <td>
                      <div
                        class="c34"
                      >
                        Do not automatically delete reports
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Task ToolBarIcons tests should render 1`] = `
.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -10px;
}

.c1 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 > * {
  margin-left: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-left: -5px;
}

.c2 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 > * {
  margin-left: 5px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -5px;
}

.c6 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 > * {
  margin-left: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  cursor: pointer;
}

.c13 {
  cursor: pointer;
}

.c13 svg path {
  fill: #aaaaaa;
}

.c3 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c3 * {
  height: inherit;
  width: inherit;
}

.c14 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #66c430;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  position: relative;
  display: none;
}

.c7:hover .c9 {
  display: block;
}

.c10 {
  position: absolute;
  margin: 0;
  padding: 0;
  left: 0;
  top: 0;
  z-index: 100;
  list-style: none;
  font-size: 10px;
  width: 255px;
}

.c11 {
  height: 22px;
  width: 255px;
  border-left: 1px solid #787878;
  border-right: 1px solid #787878;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #fff;
  font-weight: bold;
  text-indent: 12px;
  text-align: left;
}

.c11:first-child {
  border-top: 1px solid #787878;
}

.c11:last-child {
  border-bottom: 1px solid #787878;
}

.c11:hover {
  background: #66c430;
  color: #fff;
}

.c11 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  cursor: pointer;
}

@media print {
  .c4 {
    display: none;
  }
}

@media print {
  .c13 {
    display: none;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    margin="10px"
  >
    <div
      class="c0"
    >
      <div
        class="c2"
        margin="5px"
      >
        <a
          href="test/en/scanning.html#managing-tasks"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c3 c4"
            data-testid="svg-icon"
            title="Help: Tasks"
          >
            <svg>
              help.svg
            </svg>
          </span>
        </a>
        <a
          class="c5"
          href="/tasks"
        >
          <span
            class="c3 c4"
            data-testid="svg-icon"
            title="Task List"
          >
            <svg>
              list.svg
            </svg>
          </span>
        </a>
        <span
          class="c3 c4"
          data-testid="svg-icon"
          title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
        >
          <svg>
            alterable.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c6"
        margin="5px"
      >
        <span
          class="c7 c8"
        >
          <span
            class="c3 c4"
            data-testid="svg-icon"
          >
            <svg>
              new.svg
            </svg>
          </span>
          <div
            class="c9"
          >
            <ul
              class="c10"
            >
              <li
                class="c11"
              >
                <div
                  class="c12"
                >
                  New Task
                </div>
              </li>
              <li
                class="c11"
              >
                <div
                  class="c12"
                >
                  New Container Task
                </div>
              </li>
            </ul>
          </div>
        </span>
        <span
          class="c3 c4"
          data-testid="svg-icon"
          title="Clone Task"
        >
          <svg>
            clone.svg
          </svg>
        </span>
        <span
          class="c3 c4"
          data-testid="svg-icon"
          title="Edit Task"
        >
          <svg>
            edit.svg
          </svg>
        </span>
        <span
          class="c3 c4"
          data-testid="svg-icon"
          title="Move Task to trashcan"
        >
          <svg>
            trashcan.svg
          </svg>
        </span>
        <span
          class="c3 c4"
          data-testid="svg-icon"
          title="Export Task as XML"
        >
          <svg>
            export.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c6"
        margin="5px"
      >
        <span
          class="c3 c4"
          data-testid="svg-icon"
          title="Start"
        >
          <svg>
            start.svg
          </svg>
        </span>
        <span
          alt="Resume"
          class="c3 c13"
          data-testid="svg-icon"
          title="Task is not stopped"
        >
          <svg>
            resume.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        margin="10px"
      >
        <div
          class="c0"
        >
          <div
            class="c6"
            margin="5px"
          >
            <a
              class="c5"
              data-testid="details-link"
              href="/report/1234"
              title="Last Report for Task foo from 07/30/2019"
            >
              <span
                class="c3 c4"
                data-testid="svg-icon"
              >
                <svg>
                  report.svg
                </svg>
              </span>
            </a>
            <a
              class="c5"
              href="/reports?filter=task_id%3D12345"
              title="Total Reports for Task foo"
            >
              <div
                class="c14"
              >
                <span
                  class="c3 c4"
                  data-testid="svg-icon"
                >
                  <svg>
                    report.svg
                  </svg>
                </span>
                <span
                  class="c15"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
        <a
          class="c5"
          href="/results?filter=task_id%3D12345"
          title="Results for Task foo"
        >
          <div
            class="c14"
          >
            <span
              class="c3 c4"
              data-testid="svg-icon"
            >
              <svg>
                result.svg
              </svg>
            </span>
            <span
              class="c15"
              data-testid="badge-icon"
            >
              1
            </span>
          </div>
        </a>
        <div
          class="c0"
        >
          <div
            class="c6"
            margin="5px"
          >
            <a
              class="c5"
              href="/notes?filter=task_id%3D12345"
              title="Notes for Task foo"
            >
              <div
                class="c14"
              >
                <span
                  class="c3 c4"
                  data-testid="svg-icon"
                >
                  <svg>
                    note.svg
                  </svg>
                </span>
                <span
                  class="c15"
                  data-testid="badge-icon"
                >
                  2
                </span>
              </div>
            </a>
            <a
              class="c5"
              href="/overrides?filter=task_id%3D12345"
              title="Overrides for Task foo"
            >
              <div
                class="c14"
              >
                <span
                  class="c3 c4"
                  data-testid="svg-icon"
                >
                  <svg>
                    override.svg
                  </svg>
                </span>
                <span
                  class="c15"
                  data-testid="badge-icon"
                >
                  3
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
